# nice-enum

./: Cargo.toml  README.md
src/: lib.rs
