[package]
name = "nice-enum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
darling = "0.14"
syn = { version = "1.0", features = ["extra-traits"]} 
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.6"
